[gd_scene load_steps=8 format=3 uid="uid://d2it3evegphk6"]

[ext_resource type="Script" path="res://common/base/base_control.gd" id="1"]
[ext_resource type="Script" path="res://common/gui/common_scroll_container.gd" id="2"]
[ext_resource type="Script" path="res://common/gui/common_title.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://i1bauurdnm3m" path="res://sociality/starwish/res/title_bg.webp" id="5"]
[ext_resource type="Script" path="res://common/gui/picture_selector.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://wht5kbkqe2qt" path="res://sociality/starwish/res/icon_arr.webp" id="7"]

[sub_resource type="StyleBoxFlat" id="1"]

[node name="picture_selected_ui" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")
styleBox = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="common_title" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
script = ExtResource("4")
color = Color(0.270588, 0.0313726, 0.65098, 1)
root_path = NodePath("../..")
open_confirm = true
title_text = "选择图片"

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/common_title"]
layout_mode = 2
color = Color(0.34902, 0.0117647, 0.654902, 1)

[node name="ColorRect" type="TextureRect" parent="VBoxContainer/common_title"]
visible = false
layout_mode = 2
texture = ExtResource("5")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/common_title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "选择图片"

[node name="common_title_back" type="MarginContainer" parent="VBoxContainer/common_title"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 50
script = ExtResource("1")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/common_title/common_title_back"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 7
size_flags_stretch_ratio = 0.0
texture = ExtResource("7")
stretch_mode = 3

[node name="confirm" type="MarginContainer" parent="VBoxContainer/common_title"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 37
theme_override_constants/margin_right = 46
script = ExtResource("1")

[node name="confirm_label" type="Label" parent="VBoxContainer/common_title/confirm"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
text = "确认"
horizontal_alignment = 2

[node name="imag_node" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 537)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5

[node name="CommonScrollContainer" type="ScrollContainer" parent="VBoxContainer/imag_node"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource("2")

[node name="picture_node" type="GridContainer" parent="VBoxContainer/imag_node/CommonScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9

[connection signal="on_click" from="VBoxContainer/common_title/common_title_back" to="VBoxContainer/common_title" method="_on_common_title_back_on_click"]
